--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -45,7 +45,7 @@
         </form>
   </div>
   <div class="col-md-6">
-      <div class="card" style="width: 26rem;">
+      <div *ngIf="product.title || product.price || product.imageUrl" class="card" style="width: 20rem;" >
           <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
           <div class="card-body">
             <h4 class="card-title">{{ product.title }}</h4>
