--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -45,13 +45,7 @@
         </form>
   </div>
   <div class="col-md-6">
-      <div *ngIf="product.title || product.price || product.imageUrl" class="card" style="width: 20rem;" >
-          <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
-          <div class="card-body">
-            <h4 class="card-title">{{ product.title }}</h4>
-            <p class="card-text">{{ product.price | currency:'USD':true }}</p>
-          </div>
-        </div>
+    <product-card [product]="product" [show-actions]="false"></product-card>
   </div>
 </div>
 
