--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -14,10 +14,10 @@
     <tbody>
       <tr *ngFor="let item of cart.items">
         <td>
-          {{ item.product.title }}
+          {{ item.title }}
         </td>
         <td>
-          {{ item.quantity }}
+          <product-quantity [product]="item" [shopping-cart]="cart"></product-quantity>
         </td>
         <td>
           {{ item.totalPrice | currency:'USD':true }}
