Adding thumbnail to the products in the shopping cart

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -14,6 +14,9 @@
     <tbody>
       <tr *ngFor="let item of cart.items">
         <td>
+          <div [style.backgroundImage]="'url(' + item.imageUrl + ')'" class="thumbnail"></div>
+        </td>
+        <td>
           {{ item.title }}
         </td>
         <td>
@@ -26,6 +29,7 @@
     </tbody>
     <tfoot>
       <tr>
+        <th></th>
         <th></th>
         <th></th>
         <th class="text-right">{{ cart.totalPrice | currency:'USD':true }}</th>
