Fixing bug on the Create Product component

--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -40,7 +40,9 @@
                 <div *ngIf="imageUrl.errors.url">Please enter a valud URL.</div>
               </div>
             </div>
-          <button class="btn btn-primary">Save</button>
+          <button
+            [disabled]="!f.valid"
+            class="btn btn-primary">Save</button>
           <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
         </form>
   </div>
