--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,12 @@
 @import "~font-awesome/css/font-awesome.css";
 
 body { padding-top: 80px; }
+
+.navbar-light .navbar-brand {
+    color: #c1d62e;
+}
+
+.list-group-item.active {
+    background-color: #c1d62e;
+    border-color: #c1d62e;
+}
