--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,4 +1,19 @@
+<div class="container">
+  <div class="row">
+    <div class="col-3">
 
-<button 
-  (click)="login()"
-  class="btn btn-primary">Login with Google</button>
+    </div>
+    <div class="col text-center">
+      <h1>Welcome to <span class="green"><i _ngcontent-c1="" aria-hidden="true" class="fa fa-leaf"></i> OShop</span></h1>
+      <p>You can <b>login</b> or <b>create a new account</b> using <b>Google</b>.</p>
+      <button 
+        (click)="login()"
+        class="btn btn-primary">
+        <i class="fa fa-google"></i>&nbsp;&nbsp;&nbsp;Login with Google
+      </button>
+    </div>
+    <div class="col-3">
+
+    </div>
+  </div>
+</div>
