--- a/src/app/core/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
   <div class="container">
       <a class="navbar-brand" routerLink="/">
-        <i class="fa fa-leaf" aria-hidden="true"></i>
+        <i class="fa fa-leaf" aria-hidden="true"></i> OShop
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
         <ul class="navbar-nav">
             <ng-template #anonymousUser>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/login">Login</a>
+                <a class="nav-link" routerLink="/login">Login / Create account</a>
               </li>
             </ng-template>
             <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
