--- a/src/app/shopping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/components/shipping-form/shipping-form.component.html
@@ -8,16 +8,16 @@
   </div>
   <div class="form-group">
     <label for="">Address</label>
-    <input #addressLine1="ngModel" name="addressLine1" [(ngModel)]="shipping.addressLine1" type="text" class="form-control" placeholder="Line 1" required>
+    <input #addressLine1="ngModel" name="addressLine1" [(ngModel)]="shipping.addressLine1" type="text" class="form-control" placeholder="Address" required>
     <div class="alert alert-danger" *ngIf="addressLine1.touched && addressLine1.invalid">
-      <div *ngIf="addressLine1.errors.required">Address Line 1 is required.</div>
+      <div *ngIf="addressLine1.errors.required">Address line 1 is required.</div>
     </div>
   </div>
   <div class="form-group">
     <label for=""></label>
-    <input #addressLine2="ngModel" name="addressLine2" [(ngModel)]="shipping.addressLine2" type="text" class="form-control" placeholder="Line 2" required>
+    <input #addressLine2="ngModel" name="addressLine2" [(ngModel)]="shipping.addressLine2" type="text" class="form-control" placeholder="Apartment, suite, etc." required>
     <div class="alert alert-danger" *ngIf="addressLine2.touched && addressLine2.invalid">
-      <div *ngIf="addressLine2.errors.required">Address Line 2 is required.</div>
+      <div *ngIf="addressLine2.errors.required">Address line 2 is required.</div>
     </div>
   </div>
   <div class="form-group">
