--- a/src/app/admin/components/product-form/product-form.component.html
+++ b/src/app/admin/components/product-form/product-form.component.html
@@ -43,7 +43,7 @@
           <button
             [disabled]="!f.valid"
             class="btn btn-primary">Save</button>
-          <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
+          <button *ngIf="!isNew" type="button" (click)="delete()" class="btn btn-danger">Delete</button>
         </form>
   </div>
   <div class="col-md-6">
