--- a/src/app/shopping/components/products/products.component.html
+++ b/src/app/shopping/components/products/products.component.html
@@ -5,7 +5,7 @@
   <div class="col">
     <div class="row" *ngIf="cart$ | async as cart">
         <ng-container *ngFor="let p of filteredProducts; let i = index">
-          <div class="col">
+          <div class="col" style="max-width: 50%">
             <product-card [product]="p" [shopping-cart]="cart"></product-card>
           </div>
             <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
