Updating the order success page

--- a/src/app/shopping/components/order-success/order-success.component.html
+++ b/src/app/shopping/components/order-success/order-success.component.html
@@ -1,3 +1,5 @@
-<p>
-  order-success works!
-</p>
+<div class="container">
+  <h3>Thank you for shopping with us!</h3>
+  <p>Your order is on the way.</p>
+  <button class="btn btn-primary" id="pointer" routerLink="/">Go back home</button>
+</div>
